# ssbh_data_py

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
examples/: adj_example.py  anim_example.py  combine_meshes.py  combine_modls_meshes.py  flip_mesh_normals.py  matl_example.py  mesh_example.py  mesh_to_adj.py  meshex_example.py  modl_example.py  parent_bone_to_weights.py  single_bind_to_rigged.py  skel_example.py  skeleton_mesh.py
pyi/: Cargo.toml  build.rs
pyi/src/: lib.rs
src/: anim_data.rs  lib.rs  mesh_data.rs  modl_data.rs  skel_data.rs
ssbh_data_py/: Cargo.toml  __init__.pyi  anim_data.pyi  build.rs  mesh_data.pyi  modl_data.pyi  skel_data.pyi
ssbh_data_py/src/: adj_data.rs  anim_data.rs  hlpb_data.rs  lib.rs  map_py.rs  matl_data.rs  mesh_data.rs  meshex_data.rs  modl_data.rs  pyi.rs  repr.rs  skel_data.rs
ssbh_data_py/ssbh_data_py/: __init__.pyi  adj_data.pyi  anim_data.pyi  hlpb_data.pyi  matl_data.pyi  mesh_data.pyi  meshex_data.pyi  modl_data.pyi  skel_data.pyi
ssbh_data_py/tests/: adj_data.rs  anim_data.rs  hlpb_data.rs  matl_data.rs  mesh_data.rs  meshex_data.rs  modl_data.rs  repr.rs  skel_data.rs  ssbh_data_py.rs
ssbh_data_py_derive/: Cargo.toml
ssbh_data_py_derive/src/: lib.rs
ssbh_data_py_types/: Cargo.toml  build.rs
ssbh_data_py_types/src/: adj_data.rs  anim_data.rs  hlpb_data.rs  lib.rs  map_py.rs  matl_data.rs  mesh_data.rs  meshex_data.rs  modl_data.rs  pyi.rs  repr.rs  skel_data.rs
