[package]
name = "ssbh_data_py"
version = "0.2.6"
authors = ["ScanMountGoat <>"]
edition = "2018"

[dependencies]
ssbh_lib = "0.8"
ssbh_data = "0.9"

[lib]
name = "ssbh_data_py"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[dev-dependencies]
indoc = "1.0"
