[package]
name = "ssbh_data_py"
version = "0.2.6"
authors = ["ScanMountGoat <>"]
edition = "2018"

[dependencies]
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib" }

[lib]
name = "ssbh_data_py"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[dev-dependencies]
indoc = "1.0"
