[package]
name = "ssbh_data_py"
version = "0.8.1"
authors = ["ScanMountGoat"]
edition = "2021"

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
ssbh_data_py_types = { path = "../ssbh_data_py_types" }

[dev-dependencies]
indoc = "2.0"
strum = "0.24.1"
ssbh_data = { version = "0.18.0", features=["strum"] }

[lib]
name = "ssbh_data_py"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.20.3"
ssbh_data = { version = "0.18.0", features=["strum"] }
ssbh_data_py_types = { path = "../ssbh_data_py_types" }
strum = "0.24.1"
indoc = "2.0"