[package]
name = "ssbh_data_py"
version = "0.9.0"
authors = ["ScanMountGoat"]
edition = "2021"
readme = "../README.md"

[dependencies]
pyo3 = "0.25.1"
ssbh_data_py_types = { path = "../ssbh_data_py_types" }

[dev-dependencies]
indoc = "2.0"
strum = "0.24.1"
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib", rev = "936808c", features=["strum"] }
numpy = "0.25.0"

[lib]
name = "ssbh_data_py"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
pyo3-build-config = "0.25.1"
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib", rev = "936808c", features=["strum"] }
ssbh_data_py_types = { path = "../ssbh_data_py_types" }
strum = "0.24.1"
indoc = "2.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]