[package]
name = "ssbh_data_py_types"
version = "0.8.1"
authors = ["ScanMountGoat"]
edition = "2021"

[dependencies]
ssbh_data = { version = "0.18.0", features=["strum"] }
pyo3 = { version = "0.20.3", features = ["extension-module"] }
numpy = "0.20.0"
ssbh_data_py_derive = { path = "../ssbh_data_py_derive" }
num-traits = "0.2.15"

[dev-dependencies]
indoc = "2.0"
strum = "0.24.1"

[build-dependencies]
ssbh_data = { version = "0.18.0", features=["strum"] }
strum = "0.24.1"
indoc = "2.0"