[package]
name = "ssbh_data_py_types"
version = "0.1.0"
authors = ["ScanMountGoat"]
edition = "2021"

[dependencies]
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib", rev = "936808c", features=["strum"] }
pyo3 = { version = "0.25.1", features = ["py-clone"] }
numpy = "0.25.0"
ssbh_data_py_derive = { path = "../ssbh_data_py_derive" }
num-traits = "0.2.15"

[dev-dependencies]
indoc = "2.0"
strum = "0.24.1"

[build-dependencies]
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib", rev = "936808c", features=["strum"] }
strum = "0.24.1"
indoc = "2.0"