[package]
name = "ssbh_data_py_types"
version = "0.1.0"
authors = ["ScanMountGoat"]
edition = "2021"

[dependencies]
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib", rev = "936808c", features=["strum"] }
pyo3 = { version = "0.26.0", features = ["py-clone"] }
numpy = "0.26.0"
ssbh_data_py_derive = { path = "../ssbh_data_py_derive" }
map_py = { git = "https://github.com/ScanMountGoat/map_py", rev = "b8a6e68" }
num-traits = "0.2.15"

[dev-dependencies]
indoc = "2.0"
strum = "0.24.1"

[build-dependencies]
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib", rev = "936808c", features=["strum"] }
strum = "0.24.1"
indoc = "2.0"